# TIRAMISU

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  test_script.py  test_script_old.py
source/: conf.py  index.rst  tiramisu.rst
tests/: collisions.ipynb  masing.ipynb  opacities.ipynb  test2.ipynb  tests.ipynb
tiramisu/: accelerator.py  atmos.py  atomic_nuclear_data.py  chemistry.py  colchem.py  config.py  eclipse.py  exocross.py  format.py  nlte.py  numerics.py  profiles.py  xsec.py
